load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "review_service_lib",
    srcs = ["main.go"],
    data = [
        ".env",
    ],
    importpath = "monorepo/src/review_service",
    visibility = ["//visibility:private"],
    deps = ["//src/review_service/app"],
)

go_binary(
    name = "review_service",
    embed = [":review_service_lib"],
    visibility = ["//visibility:public"],
)
