load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "configs",
    srcs = ["config.go"],
    importpath = "monorepo/src/review_service/configs",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_joho_godotenv//:godotenv",
        "@com_github_spf13_viper//:viper",
    ],
)
