load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mocks",
    srcs = [
        "controller_mock.go",
        "repo_mock.go",
    ],
    importpath = "monorepo/src/review_service/mocks",
    visibility = ["//visibility:public"],
    deps = [
        "//src/review_service/entity",
        "@com_github_golang_mock//gomock",
    ],
)
