load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "integration_test",
    srcs = ["review_test.go"],
    deps = [
        "//src/idl/review_service",
        "//src/review_service/app",
        "//src/review_service/configs",
        "@com_github_google_uuid//:uuid",
        "@com_github_opentracing_contrib_go_grpc//:go-grpc",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)
